# rusty-property-scraper

./: Cargo.toml  README.md
resources/: useragent.txt
resources/rightmove/: search_code_url.txt  search_url.txt
resources/rightmove/test/: search_response_page.html
src/: core.rs  main.rs  rightmove.rs
