[package]
name = "rust-residential-scraper"
version = "0.1.0"
authors = ["Andy Rea <email@andrewrea.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
soup = "0.5.0"
log = "0.4.14"